# lvgl-demo

./: .gitmodules  LICENSE  README.md  meson.build
libs/: lv_conf.h  lv_drv_conf.h  update-protocols.sh
src/: lv_conf.h  main.c
