project('lvgl-demo', 'c',
    meson_version: '>=0.53.0',
    version:       '0.0.2',
    license:       'GPL-2.0-only'
)

# Many of the following files are likely unneeded but... who cares
lvgl_sources = [
    'src/lvgl/src/lv_init.c',

    'src/lvgl/src/core/lv_obj_id_builtin.c',
    'src/lvgl/src/core/lv_obj_pos.c',
    'src/lvgl/src/core/lv_obj_class.c',
    'src/lvgl/src/core/lv_obj_scroll.c',
    'src/lvgl/src/core/lv_obj_draw.c',
    'src/lvgl/src/core/lv_obj_tree.c',
    'src/lvgl/src/core/lv_refr.c',
    'src/lvgl/src/core/lv_obj_style_gen.c',
    'src/lvgl/src/core/lv_obj.c',
    'src/lvgl/src/core/lv_group.c',
    'src/lvgl/src/core/lv_obj_property.c',
    'src/lvgl/src/core/lv_obj_event.c',
    'src/lvgl/src/core/lv_obj_style.c',

    'src/lvgl/src/display/lv_display.c',

    'src/lvgl/src/draw/lv_draw.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_utils.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_arc.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_image.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_border.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_mask_rectangle.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_label.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_triangle.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_fill.c',
    'src/lvgl/src/draw/renesas/dave2d/lv_draw_dave2d_line.c',
    'src/lvgl/src/draw/vg_lite/lv_vg_lite_utils.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_label.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_buf_vg_lite.c',
    'src/lvgl/src/draw/vg_lite/lv_vg_lite_pending.c',
    'src/lvgl/src/draw/vg_lite/lv_vg_lite_stroke.c',
    'src/lvgl/src/draw/vg_lite/lv_vg_lite_decoder.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_layer.c',
    'src/lvgl/src/draw/vg_lite/lv_vg_lite_grad.c',
    'src/lvgl/src/draw/vg_lite/lv_vg_lite_math.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_line.c',
    'src/lvgl/src/draw/vg_lite/lv_vg_lite_path.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_box_shadow.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_triangle.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_mask_rect.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_fill.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_arc.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_vector.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_border.c',
    'src/lvgl/src/draw/vg_lite/lv_draw_vg_lite_img.c',
    'src/lvgl/src/draw/lv_image_decoder.c',
    'src/lvgl/src/draw/sdl/lv_draw_sdl.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_img.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_border.c',
    'src/lvgl/src/draw/sw/lv_draw_sw.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_gradient.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_fill.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_letter.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_line.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_arc.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_mask.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_box_shadow.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_mask_rect.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_vector.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_transform.c',
    'src/lvgl/src/draw/sw/lv_draw_sw_triangle.c',
    'src/lvgl/src/draw/sw/blend/lv_draw_sw_blend_to_i1.c',
    'src/lvgl/src/draw/sw/blend/lv_draw_sw_blend_to_l8.c',
    'src/lvgl/src/draw/sw/blend/lv_draw_sw_blend_to_al88.c',
    'src/lvgl/src/draw/sw/blend/lv_draw_sw_blend.c',
    'src/lvgl/src/draw/sw/blend/lv_draw_sw_blend_to_rgb888.c',
    'src/lvgl/src/draw/sw/blend/lv_draw_sw_blend_to_argb8888.c',
    'src/lvgl/src/draw/sw/blend/lv_draw_sw_blend_to_rgb565.c',
    'src/lvgl/src/draw/lv_draw_vector.c',
    'src/lvgl/src/draw/lv_draw_image.c',
    'src/lvgl/src/draw/lv_draw_buf.c',
    'src/lvgl/src/draw/lv_draw_mask.c',
    'src/lvgl/src/draw/lv_draw_rect.c',
    'src/lvgl/src/draw/lv_draw_line.c',
    'src/lvgl/src/draw/nxp/vglite/lv_vglite_matrix.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_label.c',
    'src/lvgl/src/draw/nxp/vglite/lv_vglite_buf.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_layer.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_buf_vglite.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_border.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_fill.c',
    'src/lvgl/src/draw/nxp/vglite/lv_vglite_path.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_arc.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_triangle.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_img.c',
    'src/lvgl/src/draw/nxp/vglite/lv_vglite_utils.c',
    'src/lvgl/src/draw/nxp/vglite/lv_draw_vglite_line.c',
    'src/lvgl/src/draw/nxp/pxp/lv_draw_pxp_layer.c',
    'src/lvgl/src/draw/nxp/pxp/lv_draw_buf_pxp.c',
    'src/lvgl/src/draw/nxp/pxp/lv_draw_pxp_img.c',
    'src/lvgl/src/draw/nxp/pxp/lv_draw_pxp_fill.c',
    'src/lvgl/src/draw/nxp/pxp/lv_draw_pxp.c',
    'src/lvgl/src/draw/nxp/pxp/lv_pxp_utils.c',
    'src/lvgl/src/draw/nxp/pxp/lv_pxp_cfg.c',
    'src/lvgl/src/draw/nxp/pxp/lv_pxp_osa.c',
    'src/lvgl/src/draw/lv_draw_label.c',
    'src/lvgl/src/draw/lv_draw_triangle.c',
    'src/lvgl/src/draw/lv_draw_arc.c',

    'src/lvgl/src/drivers/evdev/lv_evdev.c',
    'src/lvgl/src/drivers/x11/lv_x11_input.c',
    'src/lvgl/src/drivers/x11/lv_x11_display.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_entry.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_touchscreen.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_image_cache.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_libuv.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_lcd.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_fbdev.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_profiler.c',
    'src/lvgl/src/drivers/nuttx/lv_nuttx_cache.c',
    'src/lvgl/src/drivers/glfw/lv_opengles_texture.c',
    'src/lvgl/src/drivers/glfw/lv_glfw_window.c',
    'src/lvgl/src/drivers/glfw/lv_opengles_driver.c',
    'src/lvgl/src/drivers/glfw/lv_opengles_debug.c',
    'src/lvgl/src/drivers/qnx/lv_qnx.c',
    'src/lvgl/src/drivers/libinput/lv_xkb.c',
    'src/lvgl/src/drivers/libinput/lv_libinput.c',
    'src/lvgl/src/drivers/sdl/lv_sdl_window.c',
    'src/lvgl/src/drivers/sdl/lv_sdl_keyboard.c',
    'src/lvgl/src/drivers/sdl/lv_sdl_mouse.c',
    'src/lvgl/src/drivers/sdl/lv_sdl_mousewheel.c',
    'src/lvgl/src/drivers/windows/lv_windows_display.c',
    'src/lvgl/src/drivers/windows/lv_windows_context.c',
    'src/lvgl/src/drivers/windows/lv_windows_input.c',
    'src/lvgl/src/drivers/display/st7735/lv_st7735.c',
    'src/lvgl/src/drivers/display/lcd/lv_lcd_generic_mipi.c',
    'src/lvgl/src/drivers/display/renesas_glcdc/lv_renesas_glcdc.c',
    'src/lvgl/src/drivers/display/st7789/lv_st7789.c',
    'src/lvgl/src/drivers/display/fb/lv_linux_fbdev.c',
    'src/lvgl/src/drivers/display/st7796/lv_st7796.c',
    'src/lvgl/src/drivers/display/ili9341/lv_ili9341.c',
    'src/lvgl/src/drivers/display/drm/lv_linux_drm.c',
    'src/lvgl/src/drivers/wayland/lv_wayland.c',
    'src/lvgl/src/drivers/wayland/lv_wayland_smm.c',

    'src/lvgl/src/font/lv_font_montserrat_12.c',
    'src/lvgl/src/font/lv_font_montserrat_22.c',
    'src/lvgl/src/font/lv_font_montserrat_20.c',
    'src/lvgl/src/font/lv_font_montserrat_46.c',
    'src/lvgl/src/font/lv_font_montserrat_18.c',
    'src/lvgl/src/font/lv_font_montserrat_10.c',
    'src/lvgl/src/font/lv_font_montserrat_48.c',
    'src/lvgl/src/font/lv_font_montserrat_42.c',
    'src/lvgl/src/font/lv_font_unscii_8.c',
    'src/lvgl/src/font/lv_font_fmt_txt.c',
    'src/lvgl/src/font/lv_font_montserrat_8.c',
    'src/lvgl/src/font/lv_font_simsun_16_cjk.c',
    'src/lvgl/src/font/lv_font_montserrat_24.c',
    'src/lvgl/src/font/lv_font_montserrat_38.c',
    'src/lvgl/src/font/lv_font_montserrat_26.c',
    'src/lvgl/src/font/lv_font_unscii_16.c',
    'src/lvgl/src/font/lv_font_montserrat_32.c',
    'src/lvgl/src/font/lv_font_montserrat_28_compressed.c',
    'src/lvgl/src/font/lv_binfont_loader.c',
    'src/lvgl/src/font/lv_font_montserrat_40.c',
    'src/lvgl/src/font/lv_font_montserrat_30.c',
    'src/lvgl/src/font/lv_font_montserrat_16.c',
    'src/lvgl/src/font/lv_font_dejavu_16_persian_hebrew.c',
    'src/lvgl/src/font/lv_font_montserrat_28.c',
    'src/lvgl/src/font/lv_font.c',
    'src/lvgl/src/font/lv_font_montserrat_34.c',
    'src/lvgl/src/font/lv_font_montserrat_36.c',
    'src/lvgl/src/font/lv_font_montserrat_44.c',
    'src/lvgl/src/font/lv_font_simsun_14_cjk.c',
    'src/lvgl/src/font/lv_font_montserrat_14.c',

    'src/lvgl/src/indev/lv_indev_scroll.c',
    'src/lvgl/src/indev/lv_indev.c',

    'src/lvgl/src/layouts/lv_layout.c',
    'src/lvgl/src/layouts/grid/lv_grid.c',
    'src/lvgl/src/layouts/flex/lv_flex.c',

    'src/lvgl/src/libs/bin_decoder/lv_bin_decoder.c',
    'src/lvgl/src/libs/bmp/lv_bmp.c',
    'src/lvgl/src/libs/fsdrv/lv_fs_littlefs.c',
    'src/lvgl/src/libs/fsdrv/lv_fs_cbfs.c',
    'src/lvgl/src/libs/fsdrv/lv_fs_win32.c',
    'src/lvgl/src/libs/fsdrv/lv_fs_posix.c',
    'src/lvgl/src/libs/fsdrv/lv_fs_stdio.c',
    'src/lvgl/src/libs/fsdrv/lv_fs_memfs.c',
    'src/lvgl/src/libs/fsdrv/lv_fs_fatfs.c',
    'src/lvgl/src/libs/lodepng/lv_lodepng.c',
    'src/lvgl/src/libs/lodepng/lodepng.c',
    'src/lvgl/src/libs/barcode/lv_barcode.c',
    'src/lvgl/src/libs/barcode/code128.c',
    'src/lvgl/src/libs/libpng/lv_libpng.c',
    'src/lvgl/src/libs/rlottie/lv_rlottie.c',
    'src/lvgl/src/libs/lz4/lz4.c',
    'src/lvgl/src/libs/ffmpeg/lv_ffmpeg.c',
    'src/lvgl/src/libs/libjpeg_turbo/lv_libjpeg_turbo.c',
    'src/lvgl/src/libs/tiny_ttf/lv_tiny_ttf.c',
    'src/lvgl/src/libs/gif/lv_gif.c',
    'src/lvgl/src/libs/gif/gifdec.c',
    'src/lvgl/src/libs/rle/lv_rle.c',
    'src/lvgl/src/libs/qrcode/lv_qrcode.c',
    'src/lvgl/src/libs/qrcode/qrcodegen.c',
    'src/lvgl/src/libs/freetype/lv_freetype_outline.c',
    'src/lvgl/src/libs/freetype/lv_freetype_glyph.c',
    'src/lvgl/src/libs/freetype/lv_ftsystem.c',
    'src/lvgl/src/libs/freetype/lv_freetype.c',
    'src/lvgl/src/libs/freetype/lv_freetype_image.c',
    'src/lvgl/src/libs/tjpgd/lv_tjpgd.c',
    'src/lvgl/src/libs/tjpgd/tjpgd.c',

    'src/lvgl/src/misc/lv_event.c',
    'src/lvgl/src/misc/lv_ll.c',
    'src/lvgl/src/misc/lv_profiler_builtin.c',
    'src/lvgl/src/misc/lv_anim_timeline.c',
    'src/lvgl/src/misc/lv_array.c',
    'src/lvgl/src/misc/lv_color_op.c',
    'src/lvgl/src/misc/lv_text_ap.c',
    'src/lvgl/src/misc/lv_text.c',
    'src/lvgl/src/misc/lv_anim.c',
    'src/lvgl/src/misc/lv_rb.c',
    'src/lvgl/src/misc/lv_lru.c',
    'src/lvgl/src/misc/lv_log.c',
    'src/lvgl/src/misc/lv_timer.c',
    'src/lvgl/src/misc/lv_matrix.c',
    'src/lvgl/src/misc/lv_color.c',
    'src/lvgl/src/misc/lv_fs.c',
    'src/lvgl/src/misc/lv_area.c',
    'src/lvgl/src/misc/lv_async.c',
    'src/lvgl/src/misc/lv_math.c',
    'src/lvgl/src/misc/lv_utils.c',
    'src/lvgl/src/misc/lv_bidi.c',
    'src/lvgl/src/misc/lv_palette.c',
    'src/lvgl/src/misc/lv_style.c',
    'src/lvgl/src/misc/cache/lv_cache_entry.c',
    'src/lvgl/src/misc/cache/lv_image_cache.c',
    'src/lvgl/src/misc/cache/lv_cache.c',
    'src/lvgl/src/misc/cache/lv_image_header_cache.c',
    'src/lvgl/src/misc/cache/lv_cache_lru_rb.c',
    'src/lvgl/src/misc/lv_templ.c',
    'src/lvgl/src/misc/lv_style_gen.c',

    'src/lvgl/src/osal/lv_os_none.c',
    'src/lvgl/src/osal/lv_rtthread.c',
    'src/lvgl/src/osal/lv_pthread.c',
    'src/lvgl/src/osal/lv_mqx.c',
    'src/lvgl/src/osal/lv_windows.c',
    'src/lvgl/src/osal/lv_cmsis_rtos2.c',
    'src/lvgl/src/osal/lv_freertos.c',
    'src/lvgl/src/osal/lv_os.c',

    'src/lvgl/src/others/file_explorer/lv_file_explorer.c',
    'src/lvgl/src/others/ime/lv_ime_pinyin.c',
    'src/lvgl/src/others/fragment/lv_fragment.c',
    'src/lvgl/src/others/fragment/lv_fragment_manager.c',
    'src/lvgl/src/others/monkey/lv_monkey.c',
    'src/lvgl/src/others/snapshot/lv_snapshot.c',
    'src/lvgl/src/others/sysmon/lv_sysmon.c',
    'src/lvgl/src/others/imgfont/lv_imgfont.c',
    'src/lvgl/src/others/gridnav/lv_gridnav.c',
    'src/lvgl/src/others/vg_lite_tvg/vg_lite_matrix.c',
    'src/lvgl/src/others/observer/lv_observer.c',

    'src/lvgl/src/stdlib/clib/lv_mem_core_clib.c',
    'src/lvgl/src/stdlib/clib/lv_sprintf_clib.c',
    'src/lvgl/src/stdlib/clib/lv_string_clib.c',
    'src/lvgl/src/stdlib/builtin/lv_tlsf.c',
    'src/lvgl/src/stdlib/builtin/lv_sprintf_builtin.c',
    'src/lvgl/src/stdlib/builtin/lv_string_builtin.c',
    'src/lvgl/src/stdlib/builtin/lv_mem_core_builtin.c',
    'src/lvgl/src/stdlib/micropython/lv_mem_core_micropython.c',
    'src/lvgl/src/stdlib/rtthread/lv_string_rtthread.c',
    'src/lvgl/src/stdlib/rtthread/lv_sprintf_rtthread.c',
    'src/lvgl/src/stdlib/rtthread/lv_mem_core_rtthread.c',
    'src/lvgl/src/stdlib/lv_mem.c',
    'src/lvgl/src/themes/lv_theme.c',
    'src/lvgl/src/themes/mono/lv_theme_mono.c',
    'src/lvgl/src/themes/default/lv_theme_default.c',
    'src/lvgl/src/themes/simple/lv_theme_simple.c',

    'src/lvgl/src/tick/lv_tick.c',

    'src/lvgl/src/widgets/checkbox/lv_checkbox.c',
    'src/lvgl/src/widgets/objx_templ/lv_objx_templ.c',
    'src/lvgl/src/widgets/slider/lv_slider.c',
    'src/lvgl/src/widgets/led/lv_led.c',
    'src/lvgl/src/widgets/label/lv_label.c',
    'src/lvgl/src/widgets/msgbox/lv_msgbox.c',
    'src/lvgl/src/widgets/chart/lv_chart.c',
    'src/lvgl/src/widgets/table/lv_table.c',
    'src/lvgl/src/widgets/bar/lv_bar.c',
    'src/lvgl/src/widgets/dropdown/lv_dropdown.c',
    'src/lvgl/src/widgets/calendar/lv_calendar_header_dropdown.c',
    'src/lvgl/src/widgets/calendar/lv_calendar.c',
    'src/lvgl/src/widgets/calendar/lv_calendar_chinese.c',
    'src/lvgl/src/widgets/calendar/lv_calendar_header_arrow.c',
    'src/lvgl/src/widgets/switch/lv_switch.c',
    'src/lvgl/src/widgets/keyboard/lv_keyboard.c',
    'src/lvgl/src/widgets/canvas/lv_canvas.c',
    'src/lvgl/src/widgets/spinbox/lv_spinbox.c',
    'src/lvgl/src/widgets/roller/lv_roller.c',
    'src/lvgl/src/widgets/tileview/lv_tileview.c',
    'src/lvgl/src/widgets/scale/lv_scale.c',
    'src/lvgl/src/widgets/property/lv_textarea_properties.c',
    'src/lvgl/src/widgets/property/lv_keyboard_properties.c',
    'src/lvgl/src/widgets/property/lv_obj_properties.c',
    'src/lvgl/src/widgets/property/lv_style_properties.c',
    'src/lvgl/src/widgets/property/lv_label_properties.c',
    'src/lvgl/src/widgets/property/lv_dropdown_properties.c',
    'src/lvgl/src/widgets/property/lv_image_properties.c',
    'src/lvgl/src/widgets/property/lv_roller_properties.c',
    'src/lvgl/src/widgets/arc/lv_arc.c',
    'src/lvgl/src/widgets/button/lv_button.c',
    'src/lvgl/src/widgets/imagebutton/lv_imagebutton.c',
    'src/lvgl/src/widgets/list/lv_list.c',
    'src/lvgl/src/widgets/span/lv_span.c',
    'src/lvgl/src/widgets/animimage/lv_animimage.c',
    'src/lvgl/src/widgets/lottie/lv_lottie.c',
    'src/lvgl/src/widgets/image/lv_image.c',
    'src/lvgl/src/widgets/line/lv_line.c',
    'src/lvgl/src/widgets/tabview/lv_tabview.c',
    'src/lvgl/src/widgets/spinner/lv_spinner.c',
    'src/lvgl/src/widgets/win/lv_win.c',
    'src/lvgl/src/widgets/textarea/lv_textarea.c',
    'src/lvgl/src/widgets/buttonmatrix/lv_buttonmatrix.c',
    'src/lvgl/src/widgets/menu/lv_menu.c',
]

lvgl_demo_sources = [
    'src/lvgl/demos/widgets/lv_demo_widgets.c',
    'src/lvgl/demos/widgets/assets/img_clothes.c',
    'src/lvgl/demos/widgets/assets/img_demo_widgets_avatar.c',
    'src/lvgl/demos/widgets/assets/img_demo_widgets_needle.c',
    'src/lvgl/demos/widgets/assets/img_lvgl_logo.c',
    'src/main.c',
]

lvgl_demo_deps = [
    dependency('x11'),
]

executable('lvgl-demo',
    sources: lvgl_sources + lvgl_demo_sources,
    include_directories: [ 'src', 'src/lvgl' ],
    dependencies: lvgl_demo_deps
)

